src/test/ui/async-fn-multiple-lifetimes.stderr
error[E0709]: multiple different lifetimes used in arguments of `async fn`
  --> $DIR/async-fn-multiple-lifetimes.rs:7:47
   |
LL | async fn multiple_named_lifetimes<'a, 'b>(_: &'a u8, _: &'b u8) {}
   |                                               ^^         ^^ different lifetime here
   |                                               |
   |                                               first lifetime here
   |
   = help: `async fn` can only accept borrowed values with identical lifetimes

error[E0707]: multiple elided lifetimes used in arguments of `async fn`
  --> $DIR/async-fn-multiple-lifetimes.rs:16:39
   |
LL | async fn multiple_elided_lifetimes(_: &u8, _: &u8) {}
   |                                       ^       ^ different lifetime here
   |                                       |
   |                                       first lifetime here
   |
   = help: consider giving these arguments named lifetimes

error[E0106]: missing lifetime specifier
  --> $DIR/async-fn-multiple-lifetimes.rs:16:39
   |
LL | async fn multiple_elided_lifetimes(_: &u8, _: &u8) {}
   |                                       ^ expected lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `_` or `_`

error: aborting due to 3 previous errors

Some errors occurred: E0106, E0707, E0709.
For more information about an error, try `rustc --explain E0106`.
